[CHORE] Create dark mode toggle component
Fixes #1

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -15,7 +15,7 @@
     </select>
   </div>
   <div id="options">
-    <p>DarkMode: <Input @type="checkbox" @click={{action "toggleDarkMode"}}/></p>
+    <DarkModeToggle/>
   </div>
   <span class="label-text">{{parser}}: <strong>{{parserVersion}}</strong></span>
 </header>
