feat: Adding smart update toggle components
Updated the customize service for smart update
Changed ember-power-select-trigger width to auto

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,4 @@
+{{log customize.smartUpdate}}
 <header>
   <h1>ember-jarvis</h1>
 
@@ -15,6 +16,7 @@
     </select>
   </div>
   <div id="options">
+    <SmartUpdateToggle/>
     <DarkModeToggle/>
   </div>
   <span class="label-text">{{parser}}: <strong>{{parserVersion}}</strong></span>
